--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "thefuzz>=0.22.1",
     "spacy>=3.7.5",
     "plotly>=5.23.0",
+    "scipy>=1.14.0",
+    "python-louvain>=0.16",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
